application/static/css/style.css
:root {
  --input-padding-x: 1.5rem;
  --input-padding-y: 0.75rem;
}

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
  margin: 0.7rem 0;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(255, 245, 202);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: rgb(0, 0, 0);
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

html,
body {
  height: 100%;
  font-family: "Permanent Marker", cursive;
}

h2 {
  color: rgb(255, 255, 255);
  opacity: 0.82;
}

h4 {
  color: #fff;
}

span {
  color: #777;
}

#flash {
  color: white;
}

/* Links */
a[target]:link,
a[target]:visited {
  color: rgb(64, 86, 255);
}

a[target]:hover {
  color: rgb(0, 149, 255);
  text-decoration: none;
}

.title:hover {
  text-decoration: none;
  color: initial;
  filter: brightness(1.2);
}

.navigation a {
  margin: 0 10px;
}

.navigation a:hover {
  color: whitesmoke;
  scale: 1.2;
  text-decoration: none;
}

.movie-info > div {
  font-family: "Courier New", Courier, monospace;
  margin-left: 0;
  margin-right: 0;
}

.poster-sm {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

@media (min-width: 989px) {
  .poster-sm {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

/* Loading screen */
div#loading {
  cursor: wait;
  width: 100px;
  height: 100px;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

a {
  font-weight: bold;
  text-decoration: none;
  color: rgb(255, 255, 255);
}

/* Sticky Footer Classes */
#page-content {
  flex: 1 0 auto;
}

#sticky-footer {
  flex-shrink: none;
}

/* A dedicated element is used for the background-image due
to its fixed nature. The property "background-attachment": fixed is not supported by
many mobile browsers AND due to the way mobile transitions between its own UI elements being on the
viewport to being taken out of the viewport, said property momentarily doesn't cover the entire
background / loses its fixed effect.  */
#fixed-background {
  z-index: -1;
  position: fixed;
  top: 0;
  left: 0;
  background: #007bff;
  background: linear-gradient(to right, #0062e6, #33aeff);
  background-image: url("../images/bg8.gif");
  background-size: cover;
  width: 100vw;
  height: 100vh;
}

/* Search and scroll bar */
.card-signin {
  border: 0;
  border-radius: 1rem;
  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
}

.card-signin .card-title {
  margin-bottom: 2rem;
  font-weight: 300;
  font-size: 1.5rem;
}

.card-signin .card-body {
  padding: 2rem;
}

.form-signin {
  width: 100%;
}

.form-signin .btn {
  font-size: 80%;
  border-radius: 5rem;
  letter-spacing: 0.1rem;
  font-weight: bold;
  padding: 1rem;
  transition: all 0.2s;
}

.form-label-group {
  position: relative;
  margin-bottom: 1rem;
}

.form-label-group input {
  height: auto;
  border-radius: 2rem;
}

.form-label-group > input,
.form-label-group > label {
  padding: var(--input-padding-y) var(--input-padding-x);
}

.form-label-group > label {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  margin-bottom: 0;
  /* Override default `<label>` margin */
  line-height: 1.5;
  color: #495057;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  transition: all 0.1s ease-in-out;
}

.form-label-group input::-webkit-input-placeholder {
  color: transparent;
}

.form-label-group input:-ms-input-placeholder {
  color: transparent;
}

.form-label-group input::-ms-input-placeholder {
  color: transparent;
}

.form-label-group input::-moz-placeholder {
  color: transparent;
}

.form-label-group input::placeholder {
  color: transparent;
}

.form-label-group input:not(:placeholder-shown) {
  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
  padding-bottom: calc(var(--input-padding-y) / 3);
}

.form-label-group input:not(:placeholder-shown) ~ label {
  padding-top: calc(var(--input-padding-y) / 3);
  padding-bottom: calc(var(--input-padding-y) / 3);
  font-size: 12px;
  color: #777;
}

/* ----------------------- Instructions view ----------------------- */

.instructions-container {
  color: rgb(252, 252, 252);
  background-color: #242424;
  border-radius: 15px;
}

.instructions-container .title {
  color: inherit !important;
}

.instructions-container .card {
  background-color: inherit !important;
}

.instructions {
  width: 100%;
  font-family: Arial;
  font-size: 16px;
  padding: 0;
  list-style: none;
}

@media (min-width: 700px) {
  .instructions {
    width: 75%;
  }
}

.instructions > li {
  margin: 15px 0;
}

/* ----------------------- About view ----------------------- */

.about {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  font-size: 16px;
  color: rgb(252, 252, 252);
  background-color: #242424;
  padding: 25px;
  margin-top: 3rem;
  margin-bottom: 3rem;
  border-radius: 15px;
}

.about ul {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  list-style: none;
}

.about .details {
  width: 100%;
  font-family: Arial;
  text-align: inherit;
}

@media (min-width: 700px) {
  .about .details {
    width: 75%;
    text-align: left;
  }
}

.about .repo-links {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 15px;
  width: 100%;
  margin-top: -5px;
  padding: 0;
  font-size: 20px;
  text-align: center;
}

@media (min-width: 700px) {
  .about .repo-links {
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
  }
}

.about .the-team {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
  padding: 0;
  gap: 15px;
  width: 100%;
  font-size: 16px;
}

@media (min-width: 700px) {
  .about .the-team {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    gap: 0;
  }
}

.about li {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.about .headshot {
  width: clamp(85px, 18vw, 140px);
  height: clamp(100px, 20vw, 150px);
  border-radius: 50%;
}

/* ----------------------- Home view ----------------------- */

.home {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.button-container {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  gap: 15px;
}

.button-container {
  button {
    min-width: 250px !important;
  }
}

@media (min-width: 700px) {
  .button-container {
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }
}

.best h1,
.worst h1 {
  font-size: 1.75rem;
}

@media (min-width: 700px) {
  .best h1,
  .worst h1 {
    font-size: 2.2rem;
  }
}

main.content {
  position: relative;
  width: 85%;
}

@media (min-width: 700px) {
  main.content {
    width: 80%;
  }
}

@media (min-width: 991px) {
  main.content {
    width: 70%;
  }
}

@media (min-width: 1200px) {
  main.content {
    width: 60%;
    max-width: 900px;
  }
}

main .posters-group {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  gap: 0;
}

@media (min-width: 700px) {
  main .posters-group {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
  }
}

main .poster-container {
  position: relative;
  width: 200px;
  border: none;
  border-radius: 10px;
  margin-bottom: 1.5rem;
}

@media (min-width: 480px) {
  main .poster-container {
    width: 250px;
  }
}

@media (min-width: 700px) {
  main .poster-container {
    width: 160px;
  }
}

@media (min-width: 1200px) {
  main .poster-container {
    width: 190px;
  }
}

.poster-container:hover {
  scale: 1.1;
}

.poster-container:active {
  opacity: 0.75;
}

.poster-image {
  width: 100%;
  aspect-ratio: 2/3;
  border: none;
}

.movie-title {
  width: 100%;
  margin: 0;
  padding: 10px;
  font-size: 0.85rem;
  text-align: center;
  text-decoration: none;
  color: black;
  background-color: #fff;
}

.the {
  overflow: hidden;
}

.select-container {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.filter-option-inner-inner {
  font-size: 0.9rem !important;
}

.dropdown-menu .show,
.dropdown-menu {
  font-size: 0.7rem !important;
  width: 100% !important;
}

.because {
  width: 90%;
  text-align: center;
}

@media (min-width: 700px) {
  .because {
    width: auto;
    text-align: initial;
  }
}

.results-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 20px;
  width: 100%;
  margin-bottom: 25px;
}

@media (min-width: 700px) {
  .best {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
  }

  .results-container {
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    gap: 15px;
    margin-bottom: 60px;
  }
}

@media (min-width: 1200px) {
  .results-container {
    gap: 25px;
  }
}

.results-container .poster-container {
  width: 80%;
}

@media (min-width: 480px) {
  .results-container .poster-container {
    width: 220px;
  }
}

@media (min-width: 700px) {
  .results-container .poster-container {
    width: 120px;
  }
}

@media (min-width: 991px) {
  .results-container .poster-container {
    width: 170px;
  }
}

@media (min-width: 1200px) {
  .results-container .poster-container {
    width: 200px;
  }
}

.cs {
  display: none;
  visibility: hidden;
  color: white;
}

.mv:hover .cs {
  visibility: visible;
}

@media (min-width: 1200px) {
  .cs {
    display: initial;
  }
}

/* Fallback for Edge
  -------------------------------------------------- */

@supports (-ms-ime-align: auto) {
  .form-label-group > label {
    display: none;
  }
  .form-label-group input::-ms-input-placeholder {
    color: #777;
  }
}

/* Fallback for IE
  -------------------------------------------------- */

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .form-label-group > label {
    display: none;
  }
  .form-label-group input:-ms-input-placeholder {
    color: #777;
  }
}

